# BitFlow

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  pyproject.toml  setup.py
bitflow/: __init__.py
bitflow/ops/: __init__.py  conv.py
csrc/cuda/kernels/: conv.cu
csrc/include/bitflow/ops/: conv.h
csrc/pybind/: main.cpp  ops_bind.cpp
csrc/src/ops/: conv.cpp
docs/: README.md
example/: basic_usage.py
mec_conv/: README.md  conv_comparison_results.csv  conv_comparison_results.xlsx  mec_conv.cu  mec_conv_best.cu  mec_conv_cutlass_error.cu  mec_conv_ori.cu  mec_conv_wrapper.cpp  setup.py  setup_cutlass.py  test.py
mec_conv3/: conv3d_comparison_results.xlsx  mec_conv3d.cu
reference_code/: Im2ColMEC.cpp  Im2ColMecFuseGemm.cu  README.md  SparseBitVector.h  conv_cuda.cu  conv_cuda_test.cu  im2col_compare.cu  torch_conv.py
reference_code/mec_conv3/: conv3d_comparison_results_uniform_dims.xlsx  mec_conv3d_v1.cu  mec_conv3d_wrapper.cpp  setup.py  test.py
scripts/: README.md  build.sh  format_cpp.sh  format_python.sh  git_tree.py  setup_dev.sh  test.sh
tests/test_ops/: test_conv.py
