[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.10.0", "torch>=2.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bitflow"
version = "0.1.0"
description = "High-Performance PyTorch-Compatible Deep Learning Framework"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["pytorch", "deep learning", "cuda", "high-performance", "tensor"]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "pybind11>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=3.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
    "cmakelang>=0.6.13",  # cmake-format
]
cuda = [
    "cupy-cuda11x>=11.0.0",  # 根据 CUDA 版本调整
]
benchmark = [
    "pytest-benchmark>=4.0.0",
    "memory-profiler>=0.60.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/BitFlow"
Repository = "https://github.com/yourusername/BitFlow"
Documentation = "https://bitflow.readthedocs.io"
"Bug Tracker" = "https://github.com/yourusername/BitFlow/issues"

# 包配置
[tool.setuptools]
packages = ["bitflow"]
include-package-data = true

[tool.setuptools.package-data]
bitflow = ["_C/*.so", "_C/*.dll", "_C/*.dylib"]

# 代码格式化配置
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | csrc
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["bitflow"]
skip_glob = ["csrc/*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["csrc/", "build/", "dist/", "third_party/"]

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "numpy.*",
    "pybind11.*",
    "bitflow._C.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=bitflow",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "-v",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]