[project]
name = "bitflow"
version = "0.1.0"
requires-python = ">=3.11"
license = "MIT"
description = "High-Performance PyTorch-Compatible Deep Learning Framework"
readme = "README.md"
authors = [
    {name = "simon995", email = "your.email@example.com"},
]

keywords = ["pytorch", "deep learning", "cuda", "high-performance", "tensor"]

dependencies = [
    "torch==2.5.1",
    "numpy>=1.21.0",
    "pybind11>=2.10.0",
    "setuptools>=80.9.0",
    "cmakelang>=0.6.13",
    "pyyaml>=6.0.2",
]

[build-system]
requires = [
    "setuptools>=77.0.0,<81.0",  # 使用支持新 license 格式的版本
    "wheel",
    "pybind11>=2.10.0",
    "torch==2.5.1",
    "numpy>=1.21.0",  # 添加 numpy 到构建依赖
]
# 使用标准后端，避免 legacy 问题
build-backend = "setuptools.build_meta"

# 配置 uv 的自定义索引源
[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple"
extra-index-url = [
    "https://pypi.tuna.tsinghua.edu.cn/simple",
    "https://download.pytorch.org/whl",
    "https://download.pytorch.org/whl/cu118",
    "https://data.pyg.org/whl",
]

# 特定 wheel URL
[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.5.1%2Bcu118-cp311-cp311-linux_x86_64.whl" }

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=3.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
    "cmakelang>=0.6.13",  # cmake-format
]

cuda = [
    "cupy-cuda11x>=11.0.0",  # 根据 CUDA 版本调整
]

benchmark = [
    "pytest-benchmark>=4.0.0",
    "memory-profiler>=0.60.0",
]

docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/simon995/BitFlow"
Repository = "https://github.com/simon995/BitFlow"
Documentation = "https://bitflow.readthedocs.io"
"Bug Tracker" = "https://github.com/simon995/BitFlow/issues"

# 包配置
[tool.setuptools]
packages = ["bitflow"]
include-package-data = true

[tool.setuptools.package-data]
bitflow = ["bitflow/_C/*.so", "bitflow/_C/*.dll", "bitflow/_C/*.dylib"]

# 代码格式化配置
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | csrc
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["bitflow"]
skip_glob = ["csrc/*"]

[tool.mypy]
python_version = "3.11"  # 更新到实际使用的版本
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["csrc/", "build/", "dist/", "third_party/"]

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "numpy.*",
    "pybind11.*",
    "bitflow._C.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=bitflow",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "-v",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]
